Updated backend files

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -5,8 +5,9 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
+RUN npm install -g nodemon
 COPY . .
 
 EXPOSE 8080
 
-CMD [ "npm", "run", "dev" ]
+CMD [ "nodemon", "server.js" ]
