--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-RUN npm install -g nodemon
+RUN npm install -g nodemon && npm install
 COPY . .
 
 EXPOSE 8080
